# Logrotate-by-rust

./: README.md
logrotate_by_rust/: Cargo.toml
logrotate_by_rust/config/: settings.yml
logrotate_by_rust/src/: common.rs  main.rs
logrotate_by_rust/src/handler/: logrotate_handler.rs  mod.rs
logrotate_by_rust/src/model/: Settings.rs  mod.rs
logrotate_by_rust/src/service/: comprs_service.rs  file_service.rs  mod.rs
logrotate_by_rust/src/utils/: io_utils.rs  mod.rs
